Fix: Expand control icon misalignment when used with SemanticUI and the `compact` class
- Applied to the base stylesheet as this could effect all of them
- Fixes DataTables/DataTables #925

Sync to source repo @4e5e03f8b5f87e8857afbe086701f2dc27897731

--- a/css/responsive.bootstrap4.css
+++ b/css/responsive.bootstrap4.css
@@ -28,6 +28,7 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:before {
   box-shadow: 0 0 3px #444;
   box-sizing: content-box;
   text-align: center;
+  text-indent: 0 !important;
   font-family: 'Courier New', Courier, monospace;
   line-height: 14px;
   content: '+';
@@ -76,6 +77,7 @@ table.dataTable.dtr-column > tbody > tr > th.control:before {
   box-shadow: 0 0 3px #444;
   box-sizing: content-box;
   text-align: center;
+  text-indent: 0 !important;
   font-family: 'Courier New', Courier, monospace;
   line-height: 14px;
   content: '+';
